corrected z-index for proper hover effects for buttons

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -5,7 +5,7 @@
     position: fixed;
     width: 100%;
     bottom: 1.5rem;
-    z-index: 10;
+    z-index: 20;
     display: flex;
     justify-content: center;
     transition: left 5s ease;
