--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -196,7 +196,7 @@ button.learn-more:hover {
     }
 
     img {
-        opacity: 0.45;
+        opacity: 0.48;
         
         filter: brightness(0) saturate(100%) invert(40%) sepia(45%) saturate(350%) hue-rotate(150deg) brightness(82%) contrast(90%);
     }
